# TBG

./: .gitignore  README.md  pyproject.toml
docs/: Tickets for TBG Project.rtf  architecture.md  balance_analysis_30e.md  balance_audit_30f.md  balance_changes_30e_summary.md  balance_changes_30g_summary.md  balance_changes_30h_summary.md  battle_architecture_comparison.md  battle_controller.md  coding_standards.md  data_format.md  gameplay.md  knowledge_system.md  overview.md  roadmap.md  summons.md  tags.md  ticket_15_completion.md  ticket_31_chapter_00_fixes.md  v1_verticle_slice.md
tbg/: __init__.py
tests/: test_area_service.py  test_area_service_v2_checkpoint_block.py  test_area_service_v2_views.py  test_area_v2_repos.py  test_attribute_allocation_service.py  test_attribute_scaling.py  test_attributes.py  test_balance_invariants.py  test_battle_controller.py  test_battle_service.py  test_cli_battle_ui.py  test_cli_boxed_panel_wrapping.py  test_cli_debug.py  test_cli_menus.py  test_combatant_summon_metadata.py  test_data_loading.py  test_debuffs.py  test_defeat_handling.py  test_definition_integrity.py  test_enemy_scaling.py  test_factories.py  test_imports.py  test_inventory_service.py  test_item_effects.py  test_knowledge_keys.py  test_knowledge_service.py  test_paths.py  test_quest_service.py  test_render.py  test_rng.py  test_save_service.py  test_shop_service.py  test_side_quests.py  test_skills.py  test_story_graph_integrity.py  test_story_graph_validator.py  test_story_service.py  test_summon_loadout_service.py  test_summon_scaling.py  test_summons_repo.py
(+128 files in other folders)
