[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tbg"
version = "0.1.0"
description = "Tiny Battleground CLI skeleton with deterministic RNG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m \"not balance_snapshot\""
markers = [
  "balance_snapshot: tests asserting exact balance numbers",
]


